# ncbl2galaxy

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  ncbi_to_galaxy.py  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md
ncbi_galaxy_rice_variant_calling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ncbi_to_galaxy.py
workflows/: rice_variant_calling.ga  rice_variant_calling_paired.ga
